# HarnessforCodex

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  README_JA.md  SECURITY.md  pyproject.toml
.codex-plugin/: plugin.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  harness_work_item.yml
.github/workflows/: ci.yml  validate.yml
docs/: architecture.md  cli-reference.md  compatibility.md  demo-script.md  issue-roadmap.md  plugin-packaging.md
examples/: README.md
examples/oss-maintainer-workflow/: README.md
examples/oss-maintainer-workflow/scenarios/: release-blocker.md
examples/oss-maintainer-workflow/skills/maintainer-triage/: SKILL.md
examples/oss-maintainer-workflow/skills/maintainer-triage/agents/: openai.yaml
examples/oss-maintainer-workflow/skills/maintainer-triage/references/: triage-rubric.md
examples/python-api/: README.md
examples/python-api/scenarios/: schema-drift.md
examples/python-api/skills/api-contract-review/: SKILL.md
examples/react-app/: README.md
examples/react-app/scenarios/: responsive-state.md
examples/react-app/skills/ui-change-review/: SKILL.md
scripts/: sync_codex_skills.ps1
skills/codex-harness/: SKILL.md
skills/codex-harness/references/: project-integration.md  skill-testing-guide.md
skills/codex-harness/scripts/: scaffold_codex_skill.py  validate_codex_harness.py
src/codex_harness/: __init__.py  cli.py  constants.py  marketplace.py  scaffold.py  sync.py  validation.py
tests/: test_cli.py
(+4 files in other folders)
