[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "harness-for-codex"
version = "0.1.0"
description = "Reusable Codex skills and a CLI for building repository-local workflow harnesses."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "Apache-2.0" }
authors = [
  { name = "Harness for Codex Maintainers" }
]
keywords = ["codex", "skills", "harness", "workflow", "validation", "ai-agents"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Libraries :: Python Modules"
]
dependencies = []

[project.urls]
Homepage = "https://github.com/kkmia417/HarnessforCodex"
Repository = "https://github.com/kkmia417/HarnessforCodex"
Issues = "https://github.com/kkmia417/HarnessforCodex/issues"

[project.scripts]
codex-harness = "codex_harness.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
codex_harness = ["py.typed"]
